# sgu-bench

./: .gitignore  README.md  pyproject.toml
examples/: agent_solver.py  anthropic_solver.py  openai_solver.py
examples/traces/: README.md
problems/p100/: config.json  gen.py  oracle.py  p100.cpp  statement.txt
problems/p101/: checker.py  config.json  gen.py  oracle.py  p101.cpp  statement.txt
problems/p102/: config.json  gen.py  oracle.py  p102.cpp  statement.txt
problems/p103/: checker.py  config.json  gen.py  oracle.py  p103.cpp  statement.txt
problems/p104/: checker.py  config.json  gen.py  oracle.py  p104.cpp  statement.txt
problems/p105/: config.json  gen.py  oracle.py  p105.cpp  statement.txt
problems/p106/: config.json  gen.py  oracle.py  p106.cpp  statement.txt
problems/p107/: config.json  gen.py  oracle.py  p107.cpp  statement.txt
problems/p108/: config.json  gen.py  oracle.py  p108.cpp  statement.txt
problems/p109/: checker.py  config.json  gen.py  oracle.py  p109.cpp  statement.txt
problems/p110/: config.json  gen.py  oracle.py  p110.cpp  statement.txt
problems/p111/: config.json  gen.py  oracle.py  p111.cpp  statement.txt
problems/p112/: config.json  gen.py  oracle.py  p112.cpp  statement.txt
problems/p113/: config.json  gen.py  oracle.py  p113.cpp  statement.txt
problems/p114/: checker.py  config.json  gen.py  oracle.py  p114.cpp  statement.txt
problems/p115/: config.json  gen.py  oracle.py  p115.cpp  statement.txt
sgu_bench/: __init__.py  __main__.py  benchmark.py  build.py  fetch.py  judge.py  meta.py  paths.py  sandbox.py
(+8356 files in other folders)
